--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,10 @@
-jwt.secret=javainuse
-server.port= 8090
+jwt.secret=vanhieu
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url = jdbc:mysql://localhost:3306/securitydemo
+spring.datasource.username = root
+spring.datasource.password = mysql
+spring.jpa.show-sql = true
+spring.jpa.hibernate.ddl-auto = create-drop
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+spring.jpa.properties.hibernate.format_sql = true
+
